--- a/app/src/main/res/menu/about_menu.xml
+++ b/app/src/main/res/menu/about_menu.xml
@@ -4,6 +4,6 @@
 
     <item
         android:title="@string/photo_menu_buckets"
-        android:icon="@drawable/release_email"
+        android:icon="@mipmap/icon_shareabout"
         app:showAsAction="always"/>
 </menu>
