--- a/mobihelp_sdk_android_v1_4/res/layout/mobihelp_listitem_article.xml
+++ b/mobihelp_sdk_android_v1_4/res/layout/mobihelp_listitem_article.xml
@@ -11,4 +11,5 @@
     android:paddingTop="10dp"
     android:singleLine="false"
     android:text="Medium Text"
-    android:textAppearance="?android:attr/textAppearanceMedium" />
+    android:textAppearance="?android:attr/textAppearanceMedium"
+    />
