--- a/mobihelp_sdk_android_v1_4/res/values/themes.xml
+++ b/mobihelp_sdk_android_v1_4/res/values/themes.xml
@@ -5,30 +5,95 @@
         by Mobihelp Theme from res/values-vXX/themes.xml on newer devices.
     -->
     <style name="Theme.MobihelpSDK" parent="@style/Theme.Base.Mobihelp">
-        <item name="mh_ic_menu_search">@drawable/mobihelp_ic_action_search_dark</item>
+        <item name="mh_ic_menu_search">@drawable/search</item>
         <item name="mh_ic_menu_submit">@drawable/mobihelp_ic_action_submit_dark</item>
-        <item name="mh_ic_menu_contact_us">@drawable/mobihelp_ic_action_contact_us_dark</item>
-        <item name="mh_ic_conversations">@drawable/mobihelp_ic_conversation_dark</item>
-        <item name="mh_ic_send">@drawable/mobihelp_ic_action_send_dark</item>
-        <item name="mh_ic_attach">@drawable/mobihelp_ic_action_attach_dark</item>
+        <item name="mh_ic_menu_contact_us">@drawable/add_conversation</item>
+        <item name="mh_ic_conversations">@drawable/conversation</item>
+        <item name="mh_ic_send">@drawable/send</item>
+        <item name="mh_ic_attach">@drawable/attachment</item>
+
+        <item name="actionBarStyle">@style/AppActionBar</item>
+
+        <item name="colorPrimaryDark">@color/primary_dark_material_dark</item>
+        <item name="colorPrimary">@color/app_primary</item>
+        <item name="colorAccent">@color/app_tertiary</item>
+
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowBackground">@color/app_primary</item>
+
+        <item name="android:textColorPrimary">@color/app_primary</item>
+        <item name="android:textColor">@color/app_sixth</item>
+        <item name="android:textColorSecondary">@color/app_primary</item>
+        <item name="android:textColorTertiary">@color/app_primary</item>
+
+
     </style>
 
     <style name="Theme.MobihelpSDK.Light" parent="@style/Theme.Base.Mobihelp.Light">
-        <item name="mh_ic_menu_search">@drawable/mobihelp_ic_action_search_light</item>
+        <item name="mh_ic_menu_search">@drawable/search</item>
         <item name="mh_ic_menu_submit">@drawable/mobihelp_ic_action_submit_light</item>
-        <item name="mh_ic_menu_contact_us">@drawable/mobihelp_ic_action_contact_us_light</item>
-        <item name="mh_ic_conversations">@drawable/mobihelp_ic_conversation_light</item>
-        <item name="mh_ic_send">@drawable/mobihelp_ic_action_send_light</item>
-        <item name="mh_ic_attach">@drawable/mobihelp_ic_action_attach_light</item>
+        <item name="mh_ic_menu_contact_us">@drawable/add_conversation</item>
+        <item name="mh_ic_conversations">@drawable/conversation</item>
+        <item name="mh_ic_send">@drawable/send</item>
+        <item name="mh_ic_attach">@drawable/attachment</item>
+
+        <item name="actionBarStyle">@style/AppActionBar</item>
+
+        <item name="colorPrimaryDark">@color/primary_dark_material_dark</item>
+        <item name="colorPrimary">@color/app_primary</item>
+        <item name="colorAccent">@color/app_tertiary</item>
+
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowBackground">@color/app_primary</item>
+
+        <item name="android:textColorPrimary">@color/app_primary</item>
+        <item name="android:textColor">@color/app_sixth</item>
+        <item name="android:textColorSecondary">@color/app_primary</item>
+        <item name="android:textColorTertiary">@color/app_primary</item>
     </style>
 
     <style name="Theme.MobihelpSDK.Light.DarkActionBar" parent="@style/Theme.Base.Mobihelp.Light.DarkActionBar">
-        <item name="mh_ic_menu_search">@drawable/mobihelp_ic_action_search_dark</item>
+        <item name="mh_ic_menu_search">@drawable/search</item>
         <item name="mh_ic_menu_submit">@drawable/mobihelp_ic_action_submit_dark</item>
-        <item name="mh_ic_menu_contact_us">@drawable/mobihelp_ic_action_contact_us_dark</item>
-        <item name="mh_ic_conversations">@drawable/mobihelp_ic_conversation_light</item>
-        <item name="mh_ic_send">@drawable/mobihelp_ic_action_send_light</item>
-        <item name="mh_ic_attach">@drawable/mobihelp_ic_action_attach_light</item>
+        <item name="mh_ic_menu_contact_us">@drawable/add_conversation</item>
+        <item name="mh_ic_conversations">@drawable/conversation</item>
+        <item name="mh_ic_send">@drawable/send</item>
+        <item name="mh_ic_attach">@drawable/attachment</item>
+
+        <item name="actionBarStyle">@style/AppActionBar</item>
+
+        <item name="colorPrimaryDark">@color/primary_dark_material_dark</item>
+        <item name="colorPrimary">@color/app_primary</item>
+        <item name="colorAccent">@color/app_tertiary</item>
+
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowBackground">@color/app_primary</item>
+
+        <item name="android:textColorPrimary">@color/app_primary</item>
+        <item name="android:textColor">@color/app_sixth</item>
+        <item name="android:textColorSecondary">@color/app_primary</item>
+        <item name="android:textColorTertiary">@color/app_primary</item>
+    </style>
+
+    <style name="AppActionBar" parent="Widget.AppCompat.Light.ActionBar">
+        <item name="displayOptions">homeAsUp|showHome|showTitle</item>
+        <item name="elevation">0dp</item>
+        <item name="homeAsUpIndicator">@drawable/icon_back</item>
+        <item name="titleTextStyle">@style/AppActionBar.TitleStyle</item>
+    </style>
+
+    <style name="AppActionBar.TitleStyle" parent="TextAppearance.AppCompat.Medium.Inverse">
+        <item name="android:textColor">@color/app_fourth</item>
+    </style>
+
+    <style name="App.TextStyle.Primary" parent="">
+        <item name="android:singleLine">true</item>
+        <item name="android:textColor">@color/app_sixth</item>
+        <item name="android:textSize">@dimen/app_text_size_medium</item>
+    </style>
+
+    <style name="App.TextStyle.Secondary" parent="App.TextStyle.Primary">
+        <item name="android:textColor">@color/app_sixth_transparent_50p</item>
     </style>
 
 </resources>
