--- a/app/src/main/res/layout/activity_password_reset_success.xml
+++ b/app/src/main/res/layout/activity_password_reset_success.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="-40dp"
         android:lineSpacingMultiplier="1.4"
         android:textSize="16sp"
+        android:singleLine="false"
         android:text="@string/password_reset_success_text_start"
         style="@style/App.TextStyle.Secondary" />
 
