--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -43,38 +43,61 @@
 
     <!--menu item -->
 
-    <TextView
-        android:id="@+id/message_center"
-        style="@style/MenuListItemStyle"
-        android:text="@string/message_center"
-        android:drawablePadding="-50dp"
-        android:layout_marginLeft="50dp"
-        android:drawableLeft="@mipmap/icon_menu_message"/>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
+        <TextView
+            android:id="@+id/message_center"
+            style="@style/MenuListItemStyle"
+            android:text="@string/message_center"
+            android:gravity="left|center"
+            android:layout_gravity="center"
+            android:paddingLeft="50dp"
+            android:drawableLeft="@mipmap/icon_menu_message"
+            android:drawablePadding="20dp"/>
 
+        <TextView
+            android:id="@+id/message_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/message_center_menu_number_bg"
+            android:text="12"
+            android:paddingTop="2dp"
+            android:paddingBottom="2dp"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="90dp"
+            />
+
+    </FrameLayout>
 
     <TextView
         android:id="@+id/help_center"
         style="@style/MenuListItemStyle"
         android:text="@string/help_center"
-        android:drawablePadding="-50dp"
-        android:layout_marginLeft="50dp"
+        android:drawablePadding="20dp"
+        android:paddingLeft="50dp"
+        android:gravity="left|center"
         android:drawableLeft="@mipmap/icon_menu_help" />
 
     <TextView
         android:id="@+id/clear_buffer"
         style="@style/MenuListItemStyle"
         android:text="@string/clear_buffer"
-        android:drawablePadding="-50dp"
-        android:layout_marginLeft="50dp"
+        android:drawablePadding="20dp"
+        android:paddingLeft="50dp"
+        android:gravity="left|center"
         android:drawableLeft="@mipmap/icon_menu_clear"/>
 
     <TextView
         android:id="@+id/about"
         style="@style/MenuListItemStyle"
         android:text="@string/about_label"
-        android:drawablePadding="-50dp"
-        android:layout_marginLeft="50dp"
+        android:drawablePadding="20dp"
+        android:paddingLeft="50dp"
+        android:gravity="left|center"
         android:drawableLeft="@mipmap/icon_menu_about"/>
 
 
@@ -88,8 +111,9 @@
             style="@style/MenuListItemStyle"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="@dimen/span_space"
-            android:drawablePadding="-50dp"
-            android:layout_marginLeft="50dp"
+            android:drawablePadding="20dp"
+            android:paddingLeft="50dp"
+            android:gravity="left|center"
             android:text="@string/exit_login"
             android:drawableLeft="@mipmap/icon_menu_logout"/>
     </RelativeLayout>
