--- a/mobihelp_sdk_android_v1_4/res/layout/mobihelp_listitem_category.xml
+++ b/mobihelp_sdk_android_v1_4/res/layout/mobihelp_listitem_category.xml
@@ -6,21 +6,23 @@
 
     <TextView
         android:id="@+id/mobihelp_category_listitem_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="56dp"
         android:ellipsize="end"
         android:paddingBottom="4dp"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
         android:paddingTop="8dp"
         android:singleLine="true"
-        android:text="Category"
+        android:gravity="left|center"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textStyle="bold" />
+        android:textColor="@color/app_primary_transparent_50p"
+        android:textSize="@dimen/app_text_size_medium"
+        android:visibility="gone"/>
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_height="0.5dp"
         android:background="@color/mobihelp_divider_dark" />
 
 </LinearLayout>
