--- a/mobihelp_sdk_android_v1_4/res/values/dimens.xml
+++ b/mobihelp_sdk_android_v1_4/res/values/dimens.xml
@@ -4,4 +4,9 @@
     <dimen name="mobihelp_feedback_attachment_preview_size">72dp</dimen>
     <dimen name="mobihelp_feedback_attachment_icon_size">56dp</dimen>
     <dimen name="mobihelp_feedback_remove_icon_size">32dp</dimen>
+
+    <dimen name="app_text_size_xlarge">20sp</dimen>
+    <dimen name="app_text_size_large">18sp</dimen>
+    <dimen name="app_text_size_medium">16sp</dimen>
+    <dimen name="app_text_size_small">14sp</dimen>
 </resources>
