新增进入splash界面静默下载所有模板缩略图和同步数据库

--- a/app/src/main/assets/www/views/editor_index.html
+++ b/app/src/main/assets/www/views/editor_index.html
@@ -35,6 +35,7 @@
             <button onclick="start(16);">Start</button>
             <button onclick="read('dddddddddddd');">read</button>
             <div id="message"></div>
+            <img src="http://www.baidu.com/img/baidu_jgylogo3.gif?v=39549282.gif"/>
         </story>
     </div>
     <!--编辑图片-->
