--- a/app/src/main/res/xml/config.xml
+++ b/app/src/main/res/xml/config.xml
@@ -3,7 +3,7 @@
     <name>Wisape</name>
 
     <access origin="*"/>
-
+    <access origin="http://www.baidu.com" />
     <preference name="loglevel" value="DEBUG" />
     <preference name="Orientation" value="portrait"/>
     <preference name="AndroidPersistentFileLocation" value="Internal" />
