--- a/app/src/main/assets/www/views/editor_index.html
+++ b/app/src/main/assets/www/views/editor_index.html
@@ -32,10 +32,10 @@
             <button onclick="test(['test','test2']);">Test</button>
             <button onclick="getStageCategory();">getStageCategory</button>
             <button onclick="getStageList(1);">getStageList</button>
-            <button onclick="start(16);">Start</button>
+            <button onclick="start(59);">Start</button>
             <button onclick="read('dddddddddddd');">read</button>
             <div id="message"></div>
-            <img src="http://www.baidu.com/img/baidu_jgylogo3.gif?v=39549282.gif"/>
+            <img src="http://www.baidu.com/img/baidu_jgylogo3.gif"/>
         </story>
     </div>
     <!--编辑图片-->
