--- a/app/src/main/res/drawable/gallery_item_shadow_bg.xml
+++ b/app/src/main/res/drawable/gallery_item_shadow_bg.xml
@@ -2,6 +2,6 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="@dimen/app_dialog_radius" />
-    <solid android:color="#B3000000" />
+    <solid android:color="#000000" />
 </shape>
 
