--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -15,7 +15,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="60dp"
         android:scaleType="center"
-        android:src="@mipmap/login_logo" />
+        android:src="@mipmap/icon_login_logo" />
 
     <com.wisape.android.widget.SignUpEditText
         android:id="@+id/sign_up_email"
@@ -34,7 +34,7 @@
         app:edit_textStyle="@style/App.TextStyle.Edit"
         app:icon_paddingEnd="9dp"
         app:show_error="true"
-        app:sign_up_icon="@mipmap/login_email"
+        app:sign_up_icon="@mipmap/icon_login_email"
         app:warning_height="24dp"
         app:warning_icon="@drawable/icon_warning"
         app:warning_icon_paddingEnd="9dp"
@@ -58,7 +58,7 @@
         app:edit_textStyle="@style/App.TextStyle.Edit"
         app:icon_paddingEnd="9dp"
         app:show_error="true"
-        app:sign_up_icon="@mipmap/lock"
+        app:sign_up_icon="@mipmap/icon_email_lock"
         app:warning_height="24dp"
         app:warning_icon="@mipmap/icon_warning"
         app:warning_icon_paddingEnd="9dp"
