--- a/app/src/main/res/layout/layout_main_view_card_item.xml
+++ b/app/src/main/res/layout/layout_main_view_card_item.xml
@@ -10,63 +10,103 @@
         android:layout_height="16dp"
         android:background="@drawable/main_view_card_item_head" />
 
-    <RelativeLayout
-        android:layout_width="@dimen/card_gallery_item_size_w"
-        android:layout_height="390dp">
-
-        <com.facebook.drawee.view.SimpleDraweeView
-            android:id="@+id/card_album"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/card_gallery_item_size_h"
-            fresco:roundBottomLeft="false"
-            fresco:roundBottomRight="false"
-            fresco:roundTopLeft="true"
-            fresco:roundTopRight="true"
-            fresco:roundedCornerRadius="@dimen/app_dialog_radius"
-            fresco:roundingBorderWidth="1dp" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/gallery_item_story_bg">
 
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_below="@id/card_album"
-            android:background="@drawable/background_bottom_round"
-            android:paddingLeft="16dp">
+            android:id="@+id/main_story_bg"
+            android:layout_width="@dimen/card_gallery_item_size_w"
+            android:layout_height="390dp"
+            android:background="@drawable/navbg">
+
+            <TextView
+                android:id="@+id/text_story_state"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:background="@mipmap/icon_label"
+                android:gravity="center"
+                android:text="publish" />
 
 
-            <RelativeLayout
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:layout_alignParentRight="true"
-                android:paddingRight="16dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_alignParentBottom="true"
+                android:alpha="0.5"
+                android:background="@drawable/gallery_item_shadow_bg"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/text_eye_count"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="20dp"
+                    android:layout_weight="1"
+                    android:drawableLeft="@mipmap/icon_eye"
+                    android:drawablePadding="3dp"
+                    android:gravity="center|left"
+                    android:text="126"
+                    android:textColor="@color/app_primary"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/text_zan_count"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:drawableLeft="@mipmap/icon_zan"
+                    android:drawablePadding="3dp"
+                    android:gravity="center|left"
+                    android:layout_marginLeft="10dp"
+                    android:text="126"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/text_share_count"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:drawableLeft="@mipmap/icon_share"
+                    android:drawablePadding="3dp"
+                    android:gravity="center|left"
+                    android:layout_marginLeft="10dp"
+                    android:text="126"
+                    android:textSize="12sp" />
 
                 <ImageView
-                    android:layout_width="3.5dp"
-                    android:layout_height="14dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:background="@drawable/more_button" />
-            </RelativeLayout>
+                    android:layout_width="1dp"
+                    android:layout_height="15dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="20dp"
+                    android:background="@color/app_primary" />
+
+                <ImageView
+                    android:id="@+id/main_story_more"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:scaleType="center"
+                    android:layout_marginLeft="10dp"
+                    android:src="@mipmap/icon_more" />
+
+            </LinearLayout>
+
         </RelativeLayout>
 
-        <RelativeLayout
-            android:id="@+id/shadow_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/gallery_item_shadow_bg" />
-    </RelativeLayout>
+    </LinearLayout>
 
-
-    <com.wisape.android.view.TextView
+    <TextView
         android:id="@+id/story_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/span_space"
-        android:layout_marginRight="@dimen/span_space"
-        android:layout_marginTop="@dimen/span_space"
-        android:ellipsize="end"
+        android:layout_marginTop="16dp"
         android:gravity="center"
-        android:singleLine="true"
-        android:textColor="@color/app_primary"
-        android:textSize="@dimen/app_text_size_large" />
+        android:text="Made with love"
+        android:textColor="#2d3437"
+        android:textSize="24sp" />
 
 </LinearLayout>
