--- a/app/src/main/res/drawable-xxhdpi/password_reset_btn_bg.xml
+++ b/app/src/main/res/drawable-xxhdpi/password_reset_btn_bg.xml
@@ -3,17 +3,13 @@
 
     <item android:state_pressed="false">
         <shape>
-            <corners android:radius="8dp"/>
-
             <solid android:color="@color/app_btn_green_normal"/>
         </shape>
     </item>
 
     <item android:state_pressed="false">
         <shape>
-            <corners android:radius="8dp"/>
-
-            <solid android:color="#34c234"/>
+            <solid android:color="@color/app_btn_green_pressed"/>
         </shape>
     </item>
 
