--- a/app/src/main/res/layout/activity_password_reset.xml
+++ b/app/src/main/res/layout/activity_password_reset.xml
@@ -55,7 +55,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:background="@color/app_secondary"
+        android:background="@drawable/password_reset_btn_bg"
         android:text="@string/password_reset"
         android:textAllCaps="false"/>
 
