--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -100,7 +100,8 @@
         android:background="@android:color/transparent"
         android:gravity="center"
         android:scaleType="center"
-        android:src="@drawable/sign_up_with_twitter_selector" />
+        android:src="@drawable/sign_up_with_twitter_selector"
+        android:visibility="gone"/>
 
     <ImageButton
         android:id="@+id/sign_up_with_facebook"
@@ -114,7 +115,8 @@
         android:background="@android:color/transparent"
         android:gravity="center"
         android:scaleType="center"
-        android:src="@drawable/sign_up_with_facebook_selector" />
+        android:src="@drawable/sign_up_with_facebook_selector"
+        android:visibility="gone"/>
 
     <ImageButton
         android:id="@+id/sign_up_with_google_plus"
@@ -128,5 +130,6 @@
         android:background="@android:color/transparent"
         android:gravity="center"
         android:scaleType="center"
-        android:src="@drawable/sign_up_with_google_plus_selector" />
+        android:src="@drawable/sign_up_with_google_plus_selector"
+        android:visibility="gone"/>
 </RelativeLayout>
