--- a/mobihelp_sdk_android_v1_4/res/values/colors.xml
+++ b/mobihelp_sdk_android_v1_4/res/values/colors.xml
@@ -29,7 +29,7 @@
     <color name="app_primary_transparent_10p">#1AFFFFFF</color>
     <color name="app_primary_transparent_30p">#4DFFFFFF</color>
     <color name="app_primary_transparent_50p">#80FFFFFF</color>
-    <color name="app_secondary">#1FBC1B</color>
+    <color name="app_btn_green_normal">#1FBC1B</color>
 
     <color name="app_tertiary">#666666</color>
     <color name="app_fourth">#000000</color>
