--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -49,7 +49,14 @@
         android:layout_below="@+id/download_template"
         android:layout_marginTop="13dp" />
 
-
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Share"
+        android:id="@+id/share"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/create_story"
+        android:layout_marginTop="13dp" />
     <!--
     <com.facebook.drawee.view.SimpleDraweeView
         android:layout_width="300dp"
