--- a/app/src/main/res/layout/activity_message_center_detail.xml
+++ b/app/src/main/res/layout/activity_message_center_detail.xml
@@ -9,16 +9,14 @@
         android:id="@+id/message_center_message_detail_title"
         style="@style/App.TextStyle.Primary"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="标题" />
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/message_center_message_detail_time"
         style="@style/App.TextStyle.Secondary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:text="2015-09-18 3-4" />
+        android:layout_marginTop="12dp" />
 
     <View
         android:layout_width="match_parent"
@@ -32,8 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:singleLine="false"
-        android:text="sdfdsafsadfsadfsadfdsafdsafdsafdsfdsafdsfdsafdsffsafddsfsadfdsafdsfdsf" />
+        android:singleLine="false"/>
 
 
 </LinearLayout>
