--- a/app/src/main/res/layout/fragment_gift.xml
+++ b/app/src/main/res/layout/fragment_gift.xml
@@ -4,6 +4,17 @@
     android:layout_height="match_parent"
     android:background="#80000000">
 
+    <ImageView
+        android:id="@+id/img_no_active"
+        android:layout_width="match_parent"
+        android:layout_height="280dp"
+        android:layout_below="@id/head_bar_layout"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="@dimen/span_space"
+        android:src="@mipmap/no_message"
+        android:visibility="gone"
+        />
+
 
     <com.wisape.android.view.GalleryView
         android:id="@+id/gift_gallery"
