--- a/app/src/main/res/layout/fragment_card_gallery.xml
+++ b/app/src/main/res/layout/fragment_card_gallery.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="#ffffff">
 
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/head_bar_layout"
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="48dp"
+        android:orientation="horizontal">
 
         <RelativeLayout
             android:id="@+id/menu_switch"
             android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_alignParentLeft="true">
+            android:layout_height="50dp">
 
             <ImageView
                 android:layout_width="18dp"
@@ -24,12 +25,21 @@
                 android:background="@mipmap/icon_nav" />
         </RelativeLayout>
 
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:text="@string/my_stores"
+            android:textColor="@color/app_sixth"
+            android:textSize="@dimen/app_text_size_xlarge" />
 
         <RelativeLayout
             android:id="@+id/info_board"
             android:layout_width="60dp"
-            android:layout_height="match_parent"
-            android:layout_alignParentRight="true">
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:layout_gravity="center">
 
             <ImageView
                 android:id="@+id/gift"
@@ -47,31 +57,22 @@
                 android:background="@drawable/active_message_count_bg"
                 android:text="0"
                 android:textSize="12sp"
-                android:paddingLeft="2dp"
-                android:paddingRight="2dp"
-                android:layout_alignTop="@+id/gift"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
                 android:layout_toRightOf="@+id/gift"
                 android:layout_marginLeft="-34dp"
-                android:layout_marginTop="-3dp"
                 android:visibility="gone"/>
         </RelativeLayout>
 
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_toLeftOf="@id/info_board"
-            android:layout_toRightOf="@id/menu_switch"
-            android:gravity="center_vertical"
-            android:text="@string/my_stores"
-            android:textColor="@color/app_sixth"
-            android:textSize="@dimen/app_text_size_xlarge" />
-    </RelativeLayout>
+    </LinearLayout>
 
     <com.wisape.android.view.GalleryView
         android:id="@+id/card_gallery"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_marginBottom="12dp"
         android:layout_below="@id/head_bar_layout"
         android:layout_marginTop="@dimen/span_space" />
 
@@ -80,11 +81,10 @@
         android:id="@+id/add_story"
         android:layout_width="56dp"
         android:layout_height="56dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
+        android:layout_gravity="right"
         android:layout_marginBottom="@dimen/span_space"
         android:layout_marginRight="@dimen/span_space"
         fab:fab_colorNormal="@color/app_float_btn_normal"
         fab:fab_colorPressed="@color/app_float_btn_pressed"
         fab:fab_plusIconColor="@color/app_primary" />
-</RelativeLayout>
+</LinearLayout>
