--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -43,11 +43,14 @@
 
     <!--menu item -->
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@drawable/menu_item_background_selector"
+        android:orientation="horizontal">
 
         <TextView
+            android:layout_width="wrap_content"
             android:id="@+id/message_center"
             style="@style/MenuListItemStyle"
             android:text="@string/message_center"
@@ -65,14 +68,14 @@
             android:paddingTop="2dp"
             android:text="0"
             android:paddingBottom="2dp"
-            android:paddingLeft="12dp"
-            android:paddingRight="12dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
             android:layout_gravity="center"
-            android:layout_marginLeft="90dp"
+            android:layout_marginLeft="12dp"
             android:visibility="gone"
             />
 
-    </FrameLayout>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/help_center"
