修改读取html接口例子

--- a/app/src/main/assets/www/views/editor_index.html
+++ b/app/src/main/assets/www/views/editor_index.html
@@ -33,7 +33,7 @@
             <button onclick="getStageCategory();">getStageCategory</button>
             <button onclick="getStageList(1);">getStageList</button>
             <button onclick="start(59,2);">Start</button>
-            <button onclick="read('dddddddddddd');">read</button>
+            <button onclick="read('/storage/sdcard0/wisape/com.wisape.android/data/template/mingpian02/stage.html');">read</button>
             <div id="message"></div>
             <img src="http://www.baidu.com/img/baidu_jgylogo3.gif"/>
         </story>
